# congenial-spoon

./: .env.example  .gitignore  README.md  config.py  dependencies.py  docker-compose.yml  enums.py  exceptions.py  lifespan.py  main.py  pyproject.toml
db/: core.py
db/sql/: tables.sql
jobs/: models.py
middlewares/: measure_response_time.py
src/api/: README.md  pyproject.toml
src/api/person_tool/: config.py  dependencies.py  lifespan.py  main.py
src/api/person_tool/db/: core.py
src/api/person_tool/db/sql/: schema.pgsql  tables.sql
src/api/person_tool/factories/: service_factory.py
src/api/person_tool/jobs/: application.py  models.py  repository.py  service.py  views.py
src/api/person_tool/system/: application.py  repository.py  service.py  views.py
src/api/person_tool/tests/: conftest.py
src/api/person_tool/users/: application.py  models.py  repository.py  service.py  views.py
src/ui/person-tool/: package-lock.json  package.json
system/: service.py  views.py
users/: models.py  repository.py  service.py  views.py
