[project]
name = "person-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "fastapi[standard]>=0.116.2",
    "mypy>=1.18.2",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.9",
    "pyrefly>=0.34.0",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
    "tool>=0.8.0",
    "uv>=0.8.19",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    '**/*venv/**\*',
    "**/tests",
]
